Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/arrays/DuplicateTypeAnnotation.out
DuplicateTypeAnnotation.java:11:15: compiler.err.duplicate.annotation.missing.container: A
1 error
